--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Name of your site (displayed in the header)
-name: Your Name
+name: Java Tutorial
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: PIIP Foundation Java Tutorials
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
